--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.16.1",
     "to-string-loader": "^1.1.5",
+    "todomvc-app-css": "^2.1.0",
+    "todomvc-common": "^1.0.3",
     "ts-node": "1.2.1",
     "tslint": "^5.4.3",
     "typescript": "2.2.1",
