--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/jasmine": "2.5.38",
     "@types/lodash": "4.14.58",
     "@types/node": "^7.0.0",
-    "@types/webpack": "2.2.12",
+    "@types/webpack": "^3.0.4",
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.1.2",
@@ -72,8 +72,8 @@
     "typescript": "2.2.1",
     "url-loader": "^0.5.8",
     "webdriver-manager": "10.2.5",
-    "webpack": "2.4.1",
-    "webpack-dev-server": "^2.4.2",
+    "webpack": "^3.2.0",
+    "webpack-dev-server": "^2.5.1",
     "webpack-merge": "^2.4.0"
   }
 }
